--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name=viewport content="width=device-width, initial-scale=1">
     <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-    <link rel="icon" href="k-fevicon.png">
+    <link rel="icon" href="k-fevicon1.png">
     <style>
         body { margin: 0; padding: 0; }
         html { height: 100%; cursor: default; }
